--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # --- Python Basics ---
 __pycache__/
 *.py[cod]
-*.spec
 
 # --- User Data (NEVER UPLOAD) ---
 Workspaces/
@@ -10,8 +9,8 @@ config.json
 status.json
 
 # --- Huge Binaries (We will handle these in the Build Pipeline) ---
-poppler/
-Tesseract-OCR/
+#poppler/
+#Tesseract-OCR/
 OCR_Cache/
 
 # --- OS Junk ---
