--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   # ====================================================
-  # JOB 1: WINDOWS BUILD
+  # JOB 1: WINDOWS BUILD (Stable at ~250MB)
   # ====================================================
   build-windows:
     name: Windows Build
@@ -53,7 +53,7 @@ jobs:
         files: DocRefinePro_Win_${{ github.ref_name }}.zip
 
   # ====================================================
-  # JOB 2: MAC BUILD
+  # JOB 2: MAC BUILD (Optimized for Size Reduction)
   # ====================================================
   build-mac:
     name: macOS Build
@@ -80,6 +80,25 @@ jobs:
     - name: Build Mac App
       run: |
         pyinstaller DocRefinePro.spec --noconfirm --clean
+
+    - name: Post-Build Manual Stripping (The "Scalpel")
+      run: |
+        # Target the Frameworks directory inside the .app bundle
+        FRAMEWORKS_DIR="dist/DocRefinePro.app/Contents/Frameworks"
+        
+        # Manually delete unused heavy Qt modules collected by PyInstaller
+        # This targets the actual .framework folders that often bypass 'excludes'
+        rm -rf $FRAMEWORKS_DIR/QtDesigner.framework
+        rm -rf $FRAMEWORKS_DIR/QtNetwork.framework
+        rm -rf $FRAMEWORKS_DIR/QtDBus.framework
+        rm -rf $FRAMEWORKS_DIR/QtQml.framework
+        rm -rf $FRAMEWORKS_DIR/QtQuick.framework
+        rm -rf $FRAMEWORKS_DIR/QtVirtualKeyboard.framework
+        
+        # Strip debug symbols from the main Mach-O binary
+        strip "dist/DocRefinePro.app/Contents/MacOS/DocRefinePro"
+        
+        echo "Post-build stripping complete."
 
     - name: Create DMG Installer
       run: |
